--- a/index.html
+++ b/index.html
@@ -686,14 +686,33 @@ footer{
                   <p>Marketing Internship at MYRA, managed a team of 10 interns to achieve greater heights.</p>
                 </div>
                 <div class="ex-box">
+                  <h2>Jul'21</h2>
+                  <h4>DATA SCEINCE & BUSINESS ANALYTICS</h4>
+                  <p>Internship at The Sparks Foundation, worked on Jupyter IDE and completed multiple tasks.</p>
+                </div>
+                <div class="ex-box">
+                  <h2>Aug'21</h2>
+                  <h4>DATA SCIENCE INTERN</h4>
+                  <p>Internship at LetsGrowMore</p>
+                </div>
+                <div class="ex-box">
+                  <h2>Aug'21-Sep'21</h2>
+                  <h4>TECHNICAL INTERN</h4>
+                  <p>Internship at Cureya, worked on disease predicting ChatBot based on ML.</p>
+                </div>
+                <div class="ex-heading loader">
+                  <br />
+                  <h2>VOLUNTEER</h2>
+                </div>
+                <div class="ex-box">
                   <h2>2020-21</h2>
                   <h4>JOINT SECRETARY</h4>
                   <p>Treasurer at college departmental club, organised & coordinated many events for Extreme Team.</p>
                 </div>
                 <div class="ex-box">
-                  <h2>Jul'21</h2>
-                  <h4>DATA SCEINCE & BUSINESS ANALYTICS</h4>
-                  <p>Internship at The Sparks Foundation, worked on Jupyter IDE and completed multiple tasks.</p>
+                  <h2>2021-22</h2>
+                  <h4>PLACEMENT COORDINATOR</h4>
+                  <p>Worked with college CPDD, organised & coordinated many placement drives for my department.</p>
                 </div>
                 <div class="ex-heading loader">
                   <br />
@@ -909,19 +928,25 @@ footer{
                   <div class="row no-margin">
                     <div class="col-md-12 heading-skills no-padding">
                       <h3>EDUCATION</h3>
+                    </div>
                       <div class="ex-box">
                       <h2>2016-17</h2>
                       <h4>SENIOR SECONDARY</h4>
-                      <p>Dayawati Modi Academy-I, Modipuram<br />CBSE Board<br />Percentage: 74.6%</p>
+                      <p>Dayawati Modi Academy-I, Modipuram<br />CBSE Board<br />Percentage: 72.6%</p>
                       </div>
-                    </div>
                     <div class="col-md-12 heading-skills no-padding">
                       <div class="ex-box">
                         <h2>2018-22</h2>
                         <h4>B.TECH (CSE)</h4>
-                        <p>Galgotias College Of Engineering & Technology<br />Greater Noida<br />SGPA (Till 5th Sem): 7.1</p>
+                        <p>Galgotias College Of Engineering & Technology<br />Greater Noida<br />SGPA (Till 6th Sem): 7.48</p>
                       </div>
                     </div>
+                  </div>
+                
+                <div class="row no-margin">
+                  <div class="col-md-12 heading-skills no-padding">
+                    <br />
+                    <h3>SOCIAL PROFILES</h3>
                   </div>
                 </div>
                 <div class="address-qr-right">
@@ -935,6 +960,8 @@ footer{
                       <a href="https://www.hackerrank.com/insomniac751" target="_blank">HackerRank: @insomniac751</a>
                       <br /> <br />
                       <a href="https://github.com/srijan-27" target="_blank">GitHub: @srijan-27</a>
+                      <br /> <br />
+                      <a href="https://www.linkedin.com/in/srastogi751/" target="_blank">LinkedIn: @srastogi751</a>
                       <br /> <br />
                       <a href="https://twitter.com/srastogi27" target="_blank">Twitter: @srastogi27</a>
                       </div>
@@ -953,6 +980,7 @@ footer{
                     </div>
                   </div>
                 </div>
+                </div>
               </div>
             </div>
           </div>
@@ -968,7 +996,6 @@ footer{
         <li><a href="" class="transition" data-filter=".pythonProjects">Python Projects</a></li>
         <li><a href="" class="transition" data-filter=".cppProjects">C++ Projects</a></li>
         <li><a href="" class="transition" data-filter=".photoshop">Photoshop</a></li>
-        <li><a href="" class="transition" data-filter=".blablabla">BLABLABLA</a></li>
       </ul>
       <div class="extra-text">My works which makes you just WOW!</div>
         <ul id="portfolio-list">
